# retold-schedule

./: .dockerignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  example.env  main.py  pyproject.toml
data/: consultation.json  schedule.json
src/: config.py  main.py
src/alert/: client.py  dependencies.py  enums.py  service.py
src/bot/: routers.py
src/bot/handlers/: consultations.py  on_shutdown.py  schedule.py  start.py
src/bot/keyboards/: enums.py  main_keyboard.py
src/consultations/: dependencies.py  loader.py  models.py  schemas.py  service.py
src/model/: NotificationEvent.py  WeekContext.py  __init__.py  consultations.py  enums.py  schedule.py
src/notification/: enums.py  model.py  notification_manager.py  scheduler.py  sender.py  service.py
src/schedule/: dependencies.py  enums.py  lesson_event.py  loader.py  models.py  schemas.py  service.py
src/utils/: NotificationPlanner.py  WeekContextResolver.py  consultation_utils.py  formatter_lesson_links.py  json_utils.py  schedule_utils.py
src/week_context/: models.py  resolver.py
