[project]
name = "retold-schedule"
version = "1.0.0"
description = "Async Telegram bot for schedule management and air raid alerts."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.24.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "tzdata>=2025.3",
]
